assets/styles/main.scss
/* ... */
#Recent-Badge-Container {
  display: inline-block;
  width: 300px;
  margin-bottom: 2em;
  vertical-align: top;
  @media screen and (max-width: 700px) {
    display: block;
    width: 320px;
    margin-right: auto;
    margin-left: auto;
  }
}

#Upcoming-Container {
  display: inline-block;
  width: 300px;
  margin-bottom: 2em;
  vertical-align: top;
  @media screen and (max-width: 700px) {
    display: block;
    width: 320px;
    margin-right: auto;
    margin-left: auto;
  }
}

.Recent-Edit-Box {
  padding: 15px;
  border: solid 2px rgba(0,0,0,.12);
  background: rgba(0,0,0,.1);
  .EmphasizedNumber {
    font-size: 4.3em;
    display: inline;
    line-height: 35px;
    float: left;
    margin: 15px 15px 0;
  }
  .Recent-Edit-Sidebar {
    display: inline-block;
    font-size: .9em;
    vertical-align: middle;
    margin: 0 10;
  }
}

.Upcoming-Badges-Box {
  margin: 4px 0 1em 0;
  img {
    padding: 0 1em 0 0;
  }
}

.See-More-Badges {
  font-size: 4.5em;
  line-height: 89px;
  display: inline-block;
  width: 74px;
  height: 74px;
  transition: background-color .1s;
  text-align: center;
  vertical-align: top;
  color: #bbb;
  border: 3px solid #bbb;
  border-radius: 50%;
  background-color: #ddd;
  &:hover {
    background-color: #ccc;
    color: lighten($darkgrey, 20);
  };
}

/*----------------------------------------------*/
/*Special Text, for data, etc.*/
/*----------------------------------------------*/
.descriptor {
  font-family: 'Lato';
  font-size: .9em;
  font-weight: 300;
  text-transform: uppercase;
  color: lighten($TextColor, 20);
  margin-bottom: 10px;
}

.emphasizedNumber {
  float: left;
  font-size: 2em;
  font-weight: 700;
  line-height: 20px;
  margin-top: 2px;
  color: $DataColor;
  &.small {
    margin-left: 3px;
    font-size: 1em;
  }
  @media screen and (max-width: 320px) {
    font-size: 1.5em;
    margin-top: 4px;
    display: block;
    &.small {
      font-size: .75em;
    }
  }
}

.emphasizedText {
  font-weight: 700;
  display: inline-block;
  padding-left: 3px;
  color: $DataColor;
}

.stats-text {
  line-height: 10px;
  p {
    display: inline-block;
    padding-bottom: 10px;
  }
}

.Card-Badge {
  position: relative;
  float: left;
  // background-color: blue;
  padding-top: 20px;
  // margin-left: auto;
  // margin-right: auto;
  // padding-left: 50px;
}

.footer-mm{
  height: 50px;
  width: 100%;
  line-height: 50px;
  color: $lightgrey;
  background-color: $darkestgrey;
}

.Stats-Item {
  display: inline-block;
  width: 29%;
  height: 50px;
  padding: 10px;

  @media screen and (max-width: 595px) {
    width: 28%
  }

  @media screen and (max-width: 535px) {
    width: 46%;
    padding: 10px 10px 10px 0;
  }

  img {
    float: left;
    vertical-align: middle;
    margin-right: 10px;

    @media screen and (max-width: 1100px) {
      width: 40px;
    }
  }
}

.Stat-Info {
  float: left;
  margin-top: 3px;
  text-align: left;
  vertical-align: top;
  p {
    clear: left;
  }
  @media screen and (max-width: 320px) {
      margin-top: 0;
    }
}

.Split-ByNumbers {
  width: 39%;
  height: auto;
}

.Split-Diversity {
  width: 60%;
  height: auto;
  border: none;
  padding-top: 15px;
  @media screen and (max-width: 968px) {
    width: 100%;
  }
}

.Split-WorldReach {
  width: 20%;
  min-width: 200px;
  height: auto;
  padding-right: 20px;

  @media screen and (max-width: 320px) {
    width: 100%;
    padding-right: 0px;
  }

  table {
    width: 200px;
    @media screen and (max-width: 320px) {
      width: 100%;
    }
  }
}

.split-badge {
  min-width: 200px;
}

.split-smbadges, .split-badge {
  border-bottom: 1px solid $lightgrey;
  height: 220px;
  @media screen and (max-width: 968px) {
    min-width: 300px;
    float: right;
    clear: right;
    border-bottom: none;
    margin-bottom: 0;
  }
  @media screen and (max-width: 733px) {
    width: 46%;
  }
  @media screen and (max-width: 655px) {
    width: 100%;
  }
}

.split-badge {
  @media screen and (max-width: 733px) {
    float: left;
  }
}

.split-smbadges { 
  @media screen and (max-width: 968px) {
    float: right;
  }
}

.split-stats, .Contribute-Timeline-Container { 
  padding-bottom: 10px;
}

.split-stats, .split-contributes {
  border-right: 1px solid $lightgrey;
  padding-right: 3%;
  margin-right: 3%;
  @media screen and (max-width: 968px) {
    padding-right: 0;
    margin-right: 0;
    border: none;
  }
}

.split-smbadges, .split-contributes, .Split-Diversity, .split-stats, .Contribute-Timeline-Container { 
  @media screen and (max-width: 655px) {
    margin-bottom: 35px;
    padding-bottom: 35px;
    border-bottom: 1px solid $lightgrey;
  }
}

.split-stats {
  @media screen and (max-width: 733px) {
    height: auto;
  }
}

.Split-Map {
  width: 73%;
  height: auto;
  vertical-align: top;
  @media screen and (max-width: 827px) {
    width: 100%;
  }
}

.sub-section { 
  margin-bottom: 45px;
  @media screen and (max-width: 733px) {
    float: left;
    width: 46%;
    padding-right: 20px;
  }
  @media screen and (max-width: 560px) {
    float: left;
    width: 100%;
    padding: 0;
    margin-bottom: 30px;
  }
}

.block-contribute {
  margin-top: 30px;
}

.side-text {
  font-size: .8em;
  margin-bottom: 10px;
}


/*----------------------------------------------*/
/*              Heatmap Styles      */
/*                                  */
/*----------------------------------------------*/

.cal-heatmap-container {
  display: block;
  margin: 10px auto 10px auto;
}

.cal-heatmap-container .graph {
  font-family: 'Lucida Grande', Lucida, Verdana, sans-serif;
}

.cal-heatmap-container .graph-label {
  font-size: 10px;

  fill: #999;
}

.cal-heatmap-container .graph,
.cal-heatmap-container .graph-legend rect {
  shape-rendering: crispedges;
}

.cal-heatmap-container .graph-rect {
  fill: #d0d0d0;
}

.cal-heatmap-container .graph-subdomain-group rect:hover {
  stroke: #000;
  stroke-width: 1px;
}
/* ... */

